try to fix icons bug on IOS

--- a/github-profile-finder/src/components/Profile/Profile.module.css
+++ b/github-profile-finder/src/components/Profile/Profile.module.css
@@ -77,6 +77,7 @@ input::placeholder {
 
 #github_profile {
   padding: 20px;
+  text-align: left;
 }
 
 #github_profile img {
@@ -121,7 +122,7 @@ input::placeholder {
   gap: 0.5em;
 }
 
-div p{
+div p {
   max-width: 100%;
   overflow-wrap: break-word;
   word-wrap: break-word;
@@ -129,7 +130,9 @@ div p{
 }
 
 svg {
-  min-width: fit-content;
+  display: block;
+  min-width: 16px;
+  min-height: 16px;
 }
 
 .profile_blog a {
@@ -149,7 +152,7 @@ svg {
   color: #57606a;
 }
 
-.loading_p{
+.loading_p {
   padding: 20px;
   text-align: center;
   font-size: 1.5em;
